alertmanager/alertmanager.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    labels:
        k8s-app: alertmanager
    name: alertmanager
    namespace: monitoring
spec:
    replicas: 1
    template:
        metadata:
            labels:
                k8s-app: alertmanager
        spec:
            containers:
            - image: prom/alertmanager
              imagePullPolicy: Always
              name: prometheus
              args:
              - --config.file=/etc/alertmanager/alertmanager.yml
              volumeMounts:
                - mountPath: "/etc/alertmanager"
                  name: alertmanager-config
            - image: quay.io/dhtech/dhauth
              imagePullPolicy: Always
              name: dhauth
            restartPolicy: Always
            volumes:
                - name: alertmanager-config
                  configMap:
                    name: alertmanager-config
