alertmanager/alertmanager-ext-svc.yml
---
apiVersion: v1
kind: Service
metadata:
    name: alertmanager-ext
    namespace: monitoring
    labels:
        k8s-app: alertmanager
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      k8s-app: alertmanager
    type: ClusterIP
