alertmanager/alertmanager-svc.yml
---
apiVersion: v1
kind: Service
metadata:
    name: alertmanager
    namespace: monitoring
    labels:
        k8s-app: alertmanager
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 9093
    selector:
      k8s-app: alertmanager
    type: ClusterIP
